# ocilib

./: Makefile.am  README.in
rpm/: ocilib.spec
